--- a/translations/oe_corporate_blocks-es.po
+++ b/translations/oe_corporate_blocks-es.po
@@ -4,29 +4,41 @@ msgstr ""
 msgid "Contact the EU"
 msgstr "Contactar con la UE"
 
+msgid "tel:0080067891011"
+msgstr "tel:0080067891011"
+
+msgid "Call us 00 800 6 7 8 9 10 11"
+msgstr "Llámenos al 00 800 6 7 8 9 10 11"
+
+msgid "https://europa.eu/european-union/contact/call-us_en"
+msgstr "https://europa.eu/european-union/contact/call-us_es"
+
+msgid "Use other telephone options"
+msgstr "Utilice otras opciones telefónicas"
+
+msgid "https://europa.eu/european-union/contact/write-to-us_en"
+msgstr "https://europa.eu/european-union/contact/write-to-us_es"
+
+msgid "Write to us via our contact form"
+msgstr "Escríbanos a través del formulario de contacto"
+
+msgid "https://europa.eu/european-union/contact/meet-us_en"
+msgstr "https://europa.eu/european-union/contact/meet-us_es"
+
+msgid "Meet us at a local EU office"
+msgstr "Venga a conocernos a una oficina local de la UE"
+
 msgid "Find a social media account"
 msgstr "Cuentas en las redes sociales"
-
-msgid "EU institutions"
-msgstr "Instituciones de la UE"
-
-msgid "Call us <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
-msgstr "Llámenos al <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
-
-msgid "Use other <a href=\"https://europa.eu/european-union/contact/call-us_en\">telephone options</a>"
-msgstr "Utilice otras <a href=\"https://europa.eu/european-union/contact/call-us_es\">opciones telefónicas</a>"
-
-msgid "Write to us via our <a href=\"https://europa.eu/european-union/contact/write-to-us_en\">contact form</a>"
-msgstr "Escríbanos a través del <a href=\"https://europa.eu/european-union/contact/write-to-us_es\">formulario de contacto</a>"
-
-msgid "Meet us at a <a href=\"https://europa.eu/european-union/contact/meet-us_en\">local EU office</a>"
-msgstr "Venga a conocernos a una <a href=\"https://europa.eu/european-union/contact/meet-us_es\">oficina local de la UE</a>"
 
 msgid "Search for EU social media channels"
 msgstr "Busque los canales de la UE en las redes sociales"
 
 msgid "https://europa.eu/european-union/contact/social-networks_en"
 msgstr "https://europa.eu/european-union/contact/social-networks_es"
+
+msgid "EU institutions"
+msgstr "Instituciones de la UE"
 
 msgid "European Parliament"
 msgstr "Parlamento Europeo"
