--- a/translations/oe_corporate_blocks-fi.po
+++ b/translations/oe_corporate_blocks-fi.po
@@ -4,29 +4,41 @@ msgstr ""
 msgid "Contact the EU"
 msgstr "Ota yhteyttä EU:hun"
 
+msgid "tel:0080067891011"
+msgstr "tel:0080067891011"
+
+msgid "Call us 00 800 6 7 8 9 10 11"
+msgstr "Soita numeroon 00 800 6 7 8 9 10 11"
+
+msgid "https://europa.eu/european-union/contact/call-us_en"
+msgstr "https://europa.eu/european-union/contact/call-us_fi"
+
+msgid "Use other telephone options"
+msgstr "Käytä muita soittomahdollisuuksia"
+
+msgid "https://europa.eu/european-union/contact/write-to-us_en"
+msgstr "https://europa.eu/european-union/contact/write-to-us_fi"
+
+msgid "Write to us via our contact form"
+msgstr "Lähetä viesti yhteydenottolomakkeella"
+
+msgid "https://europa.eu/european-union/contact/meet-us_en"
+msgstr "https://europa.eu/european-union/contact/meet-us_fi"
+
+msgid "Meet us at a local EU office"
+msgstr "Käy EU:n tiedotuspisteessä"
+
 msgid "Find a social media account"
 msgstr "Sosiaalinen media"
-
-msgid "EU institutions"
-msgstr "EU:n toimielimet"
-
-msgid "Call us <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
-msgstr "Soita numeroon <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
-
-msgid "Use other <a href=\"https://europa.eu/european-union/contact/call-us_en\">telephone options</a>"
-msgstr "Käytä muita <a href=\"https://europa.eu/european-union/contact/call-us_fi\">soittomahdollisuuksia</a>"
-
-msgid "Write to us via our <a href=\"https://europa.eu/european-union/contact/write-to-us_en\">contact form</a>"
-msgstr "Lähetä viesti <a href=\"https://europa.eu/european-union/contact/write-to-us_fi\">yhteydenottolomakkeella</a>"
-
-msgid "Meet us at a <a href=\"https://europa.eu/european-union/contact/meet-us_en\">local EU office</a>"
-msgstr "Käy EU:n <a href=\"https://europa.eu/european-union/contact/meet-us_fi\">tiedotuspisteessä</a>"
 
 msgid "Search for EU social media channels"
 msgstr "EU sosiaalisessa mediassa"
 
 msgid "https://europa.eu/european-union/contact/social-networks_en"
 msgstr "https://europa.eu/european-union/contact/social-networks_fi"
+
+msgid "EU institutions"
+msgstr "EU:n toimielimet"
 
 msgid "European Parliament"
 msgstr "Euroopan parlamentti"
