--- a/translations/oe_corporate_blocks-it.po
+++ b/translations/oe_corporate_blocks-it.po
@@ -4,29 +4,41 @@ msgstr ""
 msgid "Contact the EU"
 msgstr "Contatta l'UE"
 
+msgid "tel:0080067891011"
+msgstr "tel:0080067891011"
+
+msgid "Call us 00 800 6 7 8 9 10 11"
+msgstr "Telefonaci allo 00 800 6 7 8 9 10 11"
+
+msgid "https://europa.eu/european-union/contact/call-us_en"
+msgstr "https://europa.eu/european-union/contact/call-us_it"
+
+msgid "Use other telephone options"
+msgstr "Scegli altre opzioni telefoniche"
+
+msgid "https://europa.eu/european-union/contact/write-to-us_en"
+msgstr "https://europa.eu/european-union/contact/write-to-us_it"
+
+msgid "Write to us via our contact form"
+msgstr "Scrivici - compila il modulo di contatto"
+
+msgid "https://europa.eu/european-union/contact/meet-us_en"
+msgstr "https://europa.eu/european-union/contact/meet-us_it"
+
+msgid "Meet us at a local EU office"
+msgstr "Vieni a trovarci nell'ufficio dell'UE più vicino"
+
 msgid "Find a social media account"
 msgstr "Trova un account sui social media"
-
-msgid "EU institutions"
-msgstr "Istituzioni dell’UE"
-
-msgid "Call us <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
-msgstr "Telefonaci allo <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
-
-msgid "Use other <a href=\"https://europa.eu/european-union/contact/call-us_en\">telephone options</a>"
-msgstr "Scegli altre <a href=\"https://europa.eu/european-union/contact/call-us_it\">opzioni telefoniche</a>"
-
-msgid "Write to us via our <a href=\"https://europa.eu/european-union/contact/write-to-us_en\">contact form</a>"
-msgstr "Scrivici - compila il <a href=\"https://europa.eu/european-union/contact/write-to-us_it\">modulo di contatto</a>"
-
-msgid "Meet us at a <a href=\"https://europa.eu/european-union/contact/meet-us_en\">local EU office</a>"
-msgstr "Vieni a trovarci nell'<a href=\"https://europa.eu/european-union/contact/meet-us_it\">ufficio dell'UE</a> più vicino"
 
 msgid "Search for EU social media channels"
 msgstr "Cerca i canali dell'UE sui social media"
 
 msgid "https://europa.eu/european-union/contact/social-networks_en"
 msgstr "https://europa.eu/european-union/contact/social-networks_it"
+
+msgid "EU institutions"
+msgstr "Istituzioni dell’UE"
 
 msgid "European Parliament"
 msgstr "Parlamento europeo"
