--- a/translations/oe_corporate_blocks-cs.po
+++ b/translations/oe_corporate_blocks-cs.po
@@ -4,29 +4,41 @@ msgstr ""
 msgid "Contact the EU"
 msgstr "Jak kontaktovat EU"
 
+msgid "tel:0080067891011"
+msgstr "tel:0080067891011"
+
+msgid "Call us 00 800 6 7 8 9 10 11"
+msgstr "Zavolejte nám na linku 00 800 6 7 8 9 10 11"
+
+msgid "https://europa.eu/european-union/contact/call-us_en"
+msgstr "https://europa.eu/european-union/contact/call-us_cs"
+
+msgid "Use other telephone options"
+msgstr "Kontaktujte nás na jiném čísle"
+
+msgid "https://europa.eu/european-union/contact/write-to-us_en"
+msgstr "https://europa.eu/european-union/contact/write-to-us_cs"
+
+msgid "Write to us via our contact form"
+msgstr "Napište nám pomocí kontaktního formuláře"
+
+msgid "https://europa.eu/european-union/contact/meet-us_en"
+msgstr "https://europa.eu/european-union/contact/meet-us_cs"
+
+msgid "Meet us at a local EU office"
+msgstr "Přijďte osobně do nejbližší kanceláře EU"
+
 msgid "Find a social media account"
 msgstr "Vyhledat účet na sociálních médiích"
-
-msgid "EU institutions"
-msgstr "Orgány EU"
-
-msgid "Call us <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
-msgstr "Zavolejte nám na linku <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
-
-msgid "Use other <a href=\"https://europa.eu/european-union/contact/call-us_en\">telephone options</a>"
-msgstr "Kontaktujte nás na <a href=\"https://europa.eu/european-union/contact/call-us_cs\">jiném čísle</a>"
-
-msgid "Write to us via our <a href=\"https://europa.eu/european-union/contact/write-to-us_en\">contact form</a>"
-msgstr "Napište nám pomocí <a href=\"https://europa.eu/european-union/contact/write-to-us_cs\">kontaktního formuláře</a>"
-
-msgid "Meet us at a <a href=\"https://europa.eu/european-union/contact/meet-us_en\">local EU office</a>"
-msgstr "Přijďte osobně do <a href=\"https://europa.eu/european-union/contact/meet-us_cs\">nejbližší kanceláře EU</a>"
 
 msgid "Search for EU social media channels"
 msgstr "Vyhledávání informačních kanálů EU v sociálních médiích"
 
 msgid "https://europa.eu/european-union/contact/social-networks_en"
 msgstr "https://europa.eu/european-union/contact/social-networks_cs"
+
+msgid "EU institutions"
+msgstr "Orgány EU"
 
 msgid "European Parliament"
 msgstr "Evropský parlament"
