--- a/translations/oe_corporate_blocks-el.po
+++ b/translations/oe_corporate_blocks-el.po
@@ -4,29 +4,51 @@ msgstr ""
 msgid "Contact the EU"
 msgstr "Επικοινωνήστε με την ΕΕ"
 
+msgid "tel:0080067891011"
+msgstr "tel:0080067891011"
+
+msgid "Call us 00 800 6 7 8 9 10 11"
+msgstr "Τηλεφωνήστε μας στο 00 800 6 7 8 9 10 11"
+
+msgid "https://europa.eu/european-union/contact/call-us_en"
+msgstr "https://europa.eu/european-union/contact/call-us_el"
+
+msgid "Use other telephone options"
+msgstr ""
+"Χρησιμοποιήστε άλλες τηλεφωνικές "
+"επιλογές"
+
+msgid "https://europa.eu/european-union/contact/write-to-us_en"
+msgstr "https://europa.eu/european-union/contact/write-to-us_el"
+
+msgid "Write to us via our contact form"
+msgstr ""
+"Γράψτε μας μέσω του δελτίου "
+"επικοινωνίας"
+
+msgid "https://europa.eu/european-union/contact/meet-us_en"
+msgstr "https://europa.eu/european-union/contact/meet-us_el"
+
+msgid "Meet us at a local EU office"
+msgstr ""
+"Συναντήστε μας σε τοπικό γραφείο της "
+"ΕΕ"
+
 msgid "Find a social media account"
-msgstr "Βρείτε έναν λογαριασμό σε κοινωνικό δίκτυο"
-
-msgid "EU institutions"
-msgstr "Θεσμικά όργανα της ΕΕ"
-
-msgid "Call us <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
-msgstr "Τηλεφωνήστε μας στο <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
-
-msgid "Use other <a href=\"https://europa.eu/european-union/contact/call-us_en\">telephone options</a>"
-msgstr "Χρησιμοποιήστε άλλες <a href=\"https://europa.eu/european-union/contact/call-us_el\">τηλεφωνικές επιλογές</a>"
-
-msgid "Write to us via our <a href=\"https://europa.eu/european-union/contact/write-to-us_en\">contact form</a>"
-msgstr "Γράψτε μας μέσω <a href=\"https://europa.eu/european-union/contact/write-to-us_el\">του δελτίου επικοινωνίας</a>"
-
-msgid "Meet us at a <a href=\"https://europa.eu/european-union/contact/meet-us_en\">local EU office</a>"
-msgstr "Συναντήστε μας σε <a href=\"https://europa.eu/european-union/contact/meet-us_el\">τοπικό γραφείο της ΕΕ</a>"
+msgstr ""
+"Βρείτε έναν λογαριασμό σε κοινωνικό "
+"δίκτυο"
 
 msgid "Search for EU social media channels"
-msgstr "Αναζητήστε τις σελίδες της ΕΕ στα μέσα κοινωνικής δικτύωσης"
+msgstr ""
+"Αναζητήστε τις σελίδες της ΕΕ στα μέσα "
+"κοινωνικής δικτύωσης"
 
 msgid "https://europa.eu/european-union/contact/social-networks_en"
 msgstr "https://europa.eu/european-union/contact/social-networks_el"
+
+msgid "EU institutions"
+msgstr "Θεσμικά όργανα της ΕΕ"
 
 msgid "European Parliament"
 msgstr "Ευρωπαϊκό Κοινοβούλιο"
