--- a/translations/oe_corporate_blocks-hr.po
+++ b/translations/oe_corporate_blocks-hr.po
@@ -4,29 +4,41 @@ msgstr ""
 msgid "Contact the EU"
 msgstr "Obratite se EU-u"
 
+msgid "tel:0080067891011"
+msgstr "tel:0080067891011"
+
+msgid "Call us 00 800 6 7 8 9 10 11"
+msgstr "Nazovite nas na 00 800 6 7 8 9 10 11"
+
+msgid "https://europa.eu/european-union/contact/call-us_en"
+msgstr "https://europa.eu/european-union/contact/call-us_hr"
+
+msgid "Use other telephone options"
+msgstr "Uspostavite telefonsku vezu na drugi način"
+
+msgid "https://europa.eu/european-union/contact/write-to-us_en"
+msgstr "https://europa.eu/european-union/contact/write-to-us_hr"
+
+msgid "Write to us via our contact form"
+msgstr "Pišite nam služeći se našim obrascem za kontakt"
+
+msgid "https://europa.eu/european-union/contact/meet-us_en"
+msgstr "https://europa.eu/european-union/contact/meet-us_hr"
+
+msgid "Meet us at a local EU office"
+msgstr "Upoznajte nas u lokalnom uredu EU-a"
+
 msgid "Find a social media account"
 msgstr "Pronađite profil na društvenim mrežama"
-
-msgid "EU institutions"
-msgstr "Institucije EU-a"
-
-msgid "Call us <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
-msgstr "Nazovite nas na <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
-
-msgid "Use other <a href=\"https://europa.eu/european-union/contact/call-us_en\">telephone options</a>"
-msgstr "Uspostavite <a href=\"https://europa.eu/european-union/contact/call-us_hr\">telefonsku vezu na drugi način</a>"
-
-msgid "Write to us via our <a href=\"https://europa.eu/european-union/contact/write-to-us_en\">contact form</a>"
-msgstr "Pišite nam služeći se našim <a href=\"https://europa.eu/european-union/contact/write-to-us_hr\">obrascem za kontakt</a>"
-
-msgid "Meet us at a <a href=\"https://europa.eu/european-union/contact/meet-us_en\">local EU office</a>"
-msgstr "Upoznajte nas <a href=\"https://europa.eu/european-union/contact/meet-us_hr\">u lokalnom uredu EU-a</a>"
 
 msgid "Search for EU social media channels"
 msgstr "Pronađite EU na društvenim mrežama"
 
 msgid "https://europa.eu/european-union/contact/social-networks_en"
 msgstr "https://europa.eu/european-union/contact/social-networks_hr"
+
+msgid "EU institutions"
+msgstr "Institucije EU-a"
 
 msgid "European Parliament"
 msgstr "Europski parlament"
