--- a/translations/oe_corporate_blocks-hu.po
+++ b/translations/oe_corporate_blocks-hu.po
@@ -4,29 +4,46 @@ msgstr ""
 msgid "Contact the EU"
 msgstr "Kapcsolatfelvétel"
 
+msgid "tel:0080067891011"
+msgstr "tel:0080067891011"
+
+msgid "Call us 00 800 6 7 8 9 10 11"
+msgstr "Hívjon minket! Telefonszámunk 00 800 6 7 8 9 10 11"
+
+msgid "https://europa.eu/european-union/contact/call-us_en"
+msgstr "https://europa.eu/european-union/contact/call-us_hu"
+
+msgid "Use other telephone options"
+msgstr "Válasszon a többi telefonos kapcsolatfelvételi lehetőség közül!"
+
+msgid "https://europa.eu/european-union/contact/write-to-us_en"
+msgstr "https://europa.eu/european-union/contact/write-to-us_hu"
+
+msgid "Write to us via our contact form"
+msgstr "Írjon nekünk kapcsolatfelvételi űrlapunk kitöltésével!"
+
+msgid "https://europa.eu/european-union/contact/meet-us_en"
+msgstr "https://europa.eu/european-union/contact/meet-us_hu"
+
+msgid "Meet us at a local EU office"
+msgstr "Jöjjön el személyesen helyi irodáink valamelyikébe!"
+
 msgid "Find a social media account"
-msgstr "Az EU intézményei, szervei és ügynökségei a közösségi oldalakon"
-
-msgid "EU institutions"
-msgstr "Uniós intézmények"
-
-msgid "Call us <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
-msgstr "Hívjon minket! Telefonszámunk <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
-
-msgid "Use other <a href=\"https://europa.eu/european-union/contact/call-us_en\">telephone options</a>"
-msgstr "Válasszon a többi telefonos <a href=\"https://europa.eu/european-union/contact/call-us_hu\">kapcsolatfelvételi lehetőség közül!</a>"
-
-msgid "Write to us via our <a href=\"https://europa.eu/european-union/contact/write-to-us_en\">contact form</a>"
-msgstr "Írjon nekünk <a href=\"https://europa.eu/european-union/contact/write-to-us_hu\">kapcsolatfelvételi űrlapunk</a> kitöltésével!"
-
-msgid "Meet us at a <a href=\"https://europa.eu/european-union/contact/meet-us_en\">local EU office</a>"
-msgstr "Jöjjön el személyesen <a href=\"https://europa.eu/european-union/contact/meet-us_hu\">helyi irodáink</a> valamelyikébe!"
+msgstr ""
+"Az EU intézményei, szervei és ügynökségei a közösségi "
+"oldalakon"
 
 msgid "Search for EU social media channels"
 msgstr "Kövesse az EU közösségi oldalait"
 
 msgid "https://europa.eu/european-union/contact/social-networks_en"
 msgstr "https://europa.eu/european-union/contact/social-networks_hu"
+
+msgid "EU institutions"
+msgstr "Uniós intézmények"
+
+msgid "European Parliament"
+msgstr "Európai Parlament"
 
 msgid "http://www.europarl.europa.eu/portal/"
 msgstr "http://www.europarl.europa.eu/portal/hu"
