--- a/translations/oe_corporate_blocks-lv.po
+++ b/translations/oe_corporate_blocks-lv.po
@@ -4,29 +4,41 @@ msgstr ""
 msgid "Contact the EU"
 msgstr "Kā sazināties ar ES"
 
+msgid "tel:0080067891011"
+msgstr "tel:0080067891011"
+
+msgid "Call us 00 800 6 7 8 9 10 11"
+msgstr "Zvaniet mums 00 800 6 7 8 9 10 11"
+
+msgid "https://europa.eu/european-union/contact/call-us_en"
+msgstr "https://europa.eu/european-union/contact/call-us_lv"
+
+msgid "Use other telephone options"
+msgstr "Izmantojiet citas tālruņa līnijas"
+
+msgid "https://europa.eu/european-union/contact/write-to-us_en"
+msgstr "https://europa.eu/european-union/contact/write-to-us_lv"
+
+msgid "Write to us via our contact form"
+msgstr "Rakstiet, izmantojot saziņas veidlapu"
+
+msgid "https://europa.eu/european-union/contact/meet-us_en"
+msgstr "https://europa.eu/european-union/contact/meet-us_lv"
+
+msgid "Meet us at a local EU office"
+msgstr "Nāciet uz vietējo ES biroju"
+
 msgid "Find a social media account"
 msgstr "Atrast sociālo tīklu kontu"
-
-msgid "EU institutions"
-msgstr "ES iestādes"
-
-msgid "Call us <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
-msgstr "Zvaniet mums <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
-
-msgid "Use other <a href=\"https://europa.eu/european-union/contact/call-us_en\">telephone options</a>"
-msgstr "Izmantojiet <a href=\"https://europa.eu/european-union/contact/call-us_lv\">citas tālruņa līnijas</a>"
-
-msgid "Write to us via our <a href=\"https://europa.eu/european-union/contact/write-to-us_en\">contact form</a>"
-msgstr "Rakstiet, izmantojot <a href=\"https://europa.eu/european-union/contact/write-to-us_lv\">saziņas veidlapu</a>"
-
-msgid "Meet us at a <a href=\"https://europa.eu/european-union/contact/meet-us_en\">local EU office</a>"
-msgstr "Nāciet uz <a href=\"https://europa.eu/european-union/contact/meet-us_lv\">vietējo ES biroju</a>"
 
 msgid "Search for EU social media channels"
 msgstr "ES sociālajos tīklos"
 
 msgid "https://europa.eu/european-union/contact/social-networks_en"
 msgstr "https://europa.eu/european-union/contact/social-networks_lv"
+
+msgid "EU institutions"
+msgstr "ES iestādes"
 
 msgid "European Parliament"
 msgstr "Eiropas Parlaments"
