--- a/translations/oe_corporate_blocks-mt.po
+++ b/translations/oe_corporate_blocks-mt.po
@@ -4,29 +4,41 @@ msgstr ""
 msgid "Contact the EU"
 msgstr "Ikkuntattja lill-UE"
 
+msgid "tel:0080067891011"
+msgstr "tel:0080067891011"
+
+msgid "Call us 00 800 6 7 8 9 10 11"
+msgstr "Ċemplilna 00 800 6 7 8 9 10 11"
+
+msgid "https://europa.eu/european-union/contact/call-us_en"
+msgstr "https://europa.eu/european-union/contact/call-us_mt"
+
+msgid "Use other telephone options"
+msgstr "Uża alternattivi telefoniċi oħra"
+
+msgid "https://europa.eu/european-union/contact/write-to-us_en"
+msgstr "https://europa.eu/european-union/contact/write-to-us_mt"
+
+msgid "Write to us via our contact form"
+msgstr "Iltaqa’ magħna f’uffiċċju lokali tal-UE"
+
+msgid "https://europa.eu/european-union/contact/meet-us_en"
+msgstr "https://europa.eu/european-union/contact/meet-us_mt"
+
+msgid "Meet us at a local EU office"
+msgstr "Iktbilna permezz tal-formola ta’ kuntatt tagħna"
+
 msgid "Find a social media account"
 msgstr "Sib kont ta' midja soċjali"
-
-msgid "EU institutions"
-msgstr "Istituzzjonijiet tal-UE"
-
-msgid "Call us <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
-msgstr "Ċemplilna <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
-
-msgid "Use other <a href=\"https://europa.eu/european-union/contact/call-us_en\">telephone options</a>"
-msgstr "Uża alternattivi <a href=\"https://europa.eu/european-union/contact/call-us_mt\">telefoniċi oħra</a>"
-
-msgid "Write to us via our <a href=\"https://europa.eu/european-union/contact/write-to-us_en\">contact form</a>"
-msgstr "Iltaqa’ magħna <a href=\"https://europa.eu/european-union/contact/write-to-us_mt\">f’uffiċċju lokali tal-UE</a>"
-
-msgid "Meet us at a <a href=\"https://europa.eu/european-union/contact/meet-us_en\">local EU office</a>"
-msgstr "Iktbilna permezz <a href=\"https://europa.eu/european-union/contact/meet-us_mt\">tal-formola ta’ kuntatt tagħna</a>"
 
 msgid "Search for EU social media channels"
 msgstr "Fittex kanali tal-midja soċjali tal-UE"
 
 msgid "https://europa.eu/european-union/contact/social-networks_en"
 msgstr "https://europa.eu/european-union/contact/social-networks_mt"
+
+msgid "EU institutions"
+msgstr "Istituzzjonijiet tal-UE"
 
 msgid "European Parliament"
 msgstr "Il-Parlament Ewropew"
