--- a/translations/oe_corporate_blocks-pl.po
+++ b/translations/oe_corporate_blocks-pl.po
@@ -4,29 +4,41 @@ msgstr ""
 msgid "Contact the EU"
 msgstr "Kontakt"
 
+msgid "tel:0080067891011"
+msgstr "tel:0080067891011"
+
+msgid "Call us 00 800 6 7 8 9 10 11"
+msgstr "Zadzwoń do nas pod numer 00 800 6 7 8 9 10 11"
+
+msgid "https://europa.eu/european-union/contact/call-us_en"
+msgstr "https://europa.eu/european-union/contact/call-us_pl"
+
+msgid "Use other telephone options"
+msgstr "Skorzystaj z innych form kontaktu telefonicznego"
+
+msgid "https://europa.eu/european-union/contact/write-to-us_en"
+msgstr "https://europa.eu/european-union/contact/write-to-us_pl"
+
+msgid "Write to us via our contact form"
+msgstr "Napisz do nas, korzystając z formularza"
+
+msgid "https://europa.eu/european-union/contact/meet-us_en"
+msgstr "https://europa.eu/european-union/contact/meet-us_pl"
+
+msgid "Meet us at a local EU office"
+msgstr "Spotkaj się z nami w lokalnym biurze UE"
+
 msgid "Find a social media account"
 msgstr "Znajdź UE w serwisach społecznościowych"
-
-msgid "EU institutions"
-msgstr "Instytucje UE"
-
-msgid "Call us <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
-msgstr "Zadzwoń do nas pod numer <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
-
-msgid "Use other <a href=\"https://europa.eu/european-union/contact/call-us_en\">telephone options</a>"
-msgstr "Skorzystaj z innych form <a href=\"https://europa.eu/european-union/contact/call-us_pl\">kontaktu telefonicznego</a>"
-
-msgid "Write to us via our <a href=\"https://europa.eu/european-union/contact/write-to-us_en\">contact form</a>"
-msgstr "Napisz do nas, <a href=\"https://europa.eu/european-union/contact/write-to-us_pl\">korzystając z formularza</a>"
-
-msgid "Meet us at a <a href=\"https://europa.eu/european-union/contact/meet-us_en\">local EU office</a>"
-msgstr "Spotkaj się z nami <a href=\"https://europa.eu/european-union/contact/meet-us_pl\">w lokalnym biurze UE</a>"
 
 msgid "Search for EU social media channels"
 msgstr "Na profilu UE w mediach społecznościowych"
 
 msgid "https://europa.eu/european-union/contact/social-networks_en"
 msgstr "https://europa.eu/european-union/contact/social-networks_pl"
+
+msgid "EU institutions"
+msgstr "Instytucje UE"
 
 msgid "European Parliament"
 msgstr "Parlament Europejski"
