--- a/translations/oe_corporate_blocks-ro.po
+++ b/translations/oe_corporate_blocks-ro.po
@@ -4,29 +4,41 @@ msgstr ""
 msgid "Contact the EU"
 msgstr "Contactați UE"
 
+msgid "tel:0080067891011"
+msgstr "tel:0080067891011"
+
+msgid "Call us 00 800 6 7 8 9 10 11"
+msgstr "Apelați numărul 00 800 6 7 8 9 10 11"
+
+msgid "https://europa.eu/european-union/contact/call-us_en"
+msgstr "https://europa.eu/european-union/contact/call-us_ro"
+
+msgid "Use other telephone options"
+msgstr "Utilizați alte opțiuni telefonice"
+
+msgid "https://europa.eu/european-union/contact/write-to-us_en"
+msgstr "https://europa.eu/european-union/contact/write-to-us_ro"
+
+msgid "Write to us via our contact form"
+msgstr "Scrieți-ne completând formularul de contact"
+
+msgid "https://europa.eu/european-union/contact/meet-us_en"
+msgstr "https://europa.eu/european-union/contact/meet-us_ro"
+
+msgid "Meet us at a local EU office"
+msgstr "Veniți într-un birou local al UE"
+
 msgid "Find a social media account"
 msgstr "Găsiți un cont pe platformele de comunicare socială"
-
-msgid "EU institutions"
-msgstr "Instituțiile UE"
-
-msgid "Call us <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
-msgstr "Apelați numărul <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
-
-msgid "Use other <a href=\"https://europa.eu/european-union/contact/call-us_en\">telephone options</a>"
-msgstr "Utilizați alte <a href=\"https://europa.eu/european-union/contact/call-us_ro\">opțiuni telefonice</a>"
-
-msgid "Write to us via our <a href=\"https://europa.eu/european-union/contact/write-to-us_en\">contact form</a>"
-msgstr "Scrieți-ne completând <a href=\"https://europa.eu/european-union/contact/write-to-us_ro\">formularul de contact</a>"
-
-msgid "Meet us at a <a href=\"https://europa.eu/european-union/contact/meet-us_en\">local EU office</a>"
-msgstr "Veniți într-un birou <a href=\"https://europa.eu/european-union/contact/meet-us_ro\">local al UE</a>"
 
 msgid "Search for EU social media channels"
 msgstr "Căutați canalele UE pe rețelele sociale"
 
 msgid "https://europa.eu/european-union/contact/social-networks_en"
 msgstr "https://europa.eu/european-union/contact/social-networks_ro"
+
+msgid "EU institutions"
+msgstr "Instituțiile UE"
 
 msgid "European Parliament"
 msgstr "Parlamentul European"
