--- a/translations/oe_corporate_blocks-sk.po
+++ b/translations/oe_corporate_blocks-sk.po
@@ -4,29 +4,41 @@ msgstr ""
 msgid "Contact the EU"
 msgstr "Kontaktujte EÚ"
 
+msgid "tel:0080067891011"
+msgstr "tel:0080067891011"
+
+msgid "Call us 00 800 6 7 8 9 10 11"
+msgstr "Volajte nám na číslo 00 800 6 7 8 9 10 11"
+
+msgid "https://europa.eu/european-union/contact/call-us_en"
+msgstr "https://europa.eu/european-union/contact/call-us_sk"
+
+msgid "Use other telephone options"
+msgstr "Využite iné možnosti telefonického kontaktu"
+
+msgid "https://europa.eu/european-union/contact/write-to-us_en"
+msgstr "https://europa.eu/european-union/contact/write-to-us_sk"
+
+msgid "Write to us via our contact form"
+msgstr "Píšte nám prostredníctvom kontaktného formulára"
+
+msgid "https://europa.eu/european-union/contact/meet-us_en"
+msgstr "https://europa.eu/european-union/contact/meet-us_sk"
+
+msgid "Meet us at a local EU office"
+msgstr "Navštívte nás v niektorej z lokálnych kancelárií EÚ"
+
 msgid "Find a social media account"
 msgstr "Vyhľadať účet na sociálnych médiách"
-
-msgid "EU institutions"
-msgstr "Inštitúcie EÚ"
-
-msgid "Call us <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
-msgstr "Volajte nám na číslo <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
-
-msgid "Use other <a href=\"https://europa.eu/european-union/contact/call-us_en\">telephone options</a>"
-msgstr "Využite iné možnosti <a href=\"https://europa.eu/european-union/contact/call-us_sk\">telefonického kontaktu</a>"
-
-msgid "Write to us via our <a href=\"https://europa.eu/european-union/contact/write-to-us_en\">contact form</a>"
-msgstr "Píšte nám prostredníctvom <a href=\"https://europa.eu/european-union/contact/write-to-us_sk\">kontaktného formulára</a>"
-
-msgid "Meet us at a <a href=\"https://europa.eu/european-union/contact/meet-us_en\">local EU office</a>"
-msgstr "Navštívte nás v niektorej z <a href=\"https://europa.eu/european-union/contact/meet-us_sk\">lokálnych kancelárií EÚ</a>"
 
 msgid "Search for EU social media channels"
 msgstr "Hľadajte EÚ na sociálnych médiách"
 
 msgid "https://europa.eu/european-union/contact/social-networks_en"
 msgstr "https://europa.eu/european-union/contact/social-networks_sk"
+
+msgid "EU institutions"
+msgstr "Inštitúcie EÚ"
 
 msgid "European Parliament"
 msgstr "Európsky parlament"
