--- a/translations/oe_corporate_blocks-sl.po
+++ b/translations/oe_corporate_blocks-sl.po
@@ -4,29 +4,41 @@ msgstr ""
 msgid "Contact the EU"
 msgstr "Kontaktirajte EU"
 
+msgid "tel:0080067891011"
+msgstr "tel:0080067891011"
+
+msgid "Call us 00 800 6 7 8 9 10 11"
+msgstr "Pokličite nas 00 800 6 7 8 9 10 11"
+
+msgid "https://europa.eu/european-union/contact/call-us_en"
+msgstr "https://europa.eu/european-union/contact/call-us_sl"
+
+msgid "Use other telephone options"
+msgstr "Pokličite druge telefonske številke"
+
+msgid "https://europa.eu/european-union/contact/write-to-us_en"
+msgstr "https://europa.eu/european-union/contact/write-to-us_sl"
+
+msgid "Write to us via our contact form"
+msgstr "Pišite nam s kontaktnim obrazcem"
+
+msgid "https://europa.eu/european-union/contact/meet-us_en"
+msgstr "https://europa.eu/european-union/contact/meet-us_sl"
+
+msgid "Meet us at a local EU office"
+msgstr "Obiščite nas v lokalni pisarni EU"
+
 msgid "Find a social media account"
 msgstr "Naše strani na družbenih omrežjih"
-
-msgid "EU institutions"
-msgstr "Institucije EU"
-
-msgid "Call us <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
-msgstr "Pokličite nas <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
-
-msgid "Use other <a href=\"https://europa.eu/european-union/contact/call-us_en\">telephone options</a>"
-msgstr "Pokličite druge <a href=\"https://europa.eu/european-union/contact/call-us_sl\">telefonske številke</a>"
-
-msgid "Write to us via our <a href=\"https://europa.eu/european-union/contact/write-to-us_en\">contact form</a>"
-msgstr "Pišite nam s <a href=\"https://europa.eu/european-union/contact/write-to-us_sl\">kontaktnim obrazcem</a>"
-
-msgid "Meet us at a <a href=\"https://europa.eu/european-union/contact/meet-us_en\">local EU office</a>"
-msgstr "Obiščite nas v <a href=\"https://europa.eu/european-union/contact/meet-us_sl\">lokalni pisarni EU</a>"
 
 msgid "Search for EU social media channels"
 msgstr "Poiščite nas na družbenih medijih EU"
 
 msgid "https://europa.eu/european-union/contact/social-networks_en"
 msgstr "https://europa.eu/european-union/contact/social-networks_sl"
+
+msgid "EU institutions"
+msgstr "Institucije EU"
 
 msgid "European Parliament"
 msgstr "Evropski parlament"
