--- a/translations/oe_corporate_blocks-sv.po
+++ b/translations/oe_corporate_blocks-sv.po
@@ -4,29 +4,41 @@ msgstr ""
 msgid "Contact the EU"
 msgstr "Kontakta EU"
 
+msgid "tel:0080067891011"
+msgstr "tel:0080067891011"
+
+msgid "Call us 00 800 6 7 8 9 10 11"
+msgstr "Ring 00 800 6 7 8 9 10 11"
+
+msgid "https://europa.eu/european-union/contact/call-us_en"
+msgstr "https://europa.eu/european-union/contact/call-us_sv"
+
+msgid "Use other telephone options"
+msgstr "Använd andra telefonalternativ"
+
+msgid "https://europa.eu/european-union/contact/write-to-us_en"
+msgstr "https://europa.eu/european-union/contact/write-to-us_sv"
+
+msgid "Write to us via our contact form"
+msgstr "Skriv till oss via kontaktformuläret"
+
+msgid "https://europa.eu/european-union/contact/meet-us_en"
+msgstr "https://europa.eu/european-union/contact/meet-us_sv"
+
+msgid "Meet us at a local EU office"
+msgstr "Besök ett lokalt EU-kontor"
+
 msgid "Find a social media account"
 msgstr "Hitta ett konto på sociala medier"
-
-msgid "EU institutions"
-msgstr "EU-institutionerna"
-
-msgid "Call us <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
-msgstr "Ring <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
-
-msgid "Use other <a href=\"https://europa.eu/european-union/contact/call-us_en\">telephone options</a>"
-msgstr "Använd andra <a href=\"https://europa.eu/european-union/contact/call-us_sv\">telefonalternativ</a>"
-
-msgid "Write to us via our <a href=\"https://europa.eu/european-union/contact/write-to-us_en\">contact form</a>"
-msgstr "Skriv till oss via <a href=\"https://europa.eu/european-union/contact/write-to-us_sv\">kontaktformuläret</a>"
-
-msgid "Meet us at a <a href=\"https://europa.eu/european-union/contact/meet-us_en\">local EU office</a>"
-msgstr "Besök ett <a href=\"https://europa.eu/european-union/contact/meet-us_sv\">lokalt EU-kontor</a>"
 
 msgid "Search for EU social media channels"
 msgstr "Hitta oss i sociala medier"
 
 msgid "https://europa.eu/european-union/contact/social-networks_en"
 msgstr "https://europa.eu/european-union/contact/social-networks_sv"
+
+msgid "EU institutions"
+msgstr "EU-institutionerna"
 
 msgid "European Parliament"
 msgstr "Europaparlamentet"
