--- a/translations/oe_corporate_blocks-de.po
+++ b/translations/oe_corporate_blocks-de.po
@@ -145,8 +145,8 @@ msgstr "https://ec.europa.eu/info/index_de"
 msgid "European Commission website"
 msgstr "Website der Europäischen Kommission"
 
-msgid "This site is managed by the Directorate-General for Communication"
-msgstr "Diese Website wird von der Generaldirektion Kommunikation verwaltet"
+msgid "This site is managed by the @name"
+msgstr "Diese Website wird von der @name"
 
 msgid "https://ec.europa.eu/info/strategy_en"
 msgstr "https://ec.europa.eu/info/strategy_de"
