--- a/translations/oe_corporate_blocks-es.po
+++ b/translations/oe_corporate_blocks-es.po
@@ -145,8 +145,8 @@ msgstr "https://ec.europa.eu/info/index_es"
 msgid "European Commission website"
 msgstr "Sitio web de la Comisión Europea"
 
-msgid "This site is managed by the Directorate-General for Communication"
-msgstr "Gestionada por la Dirección General de Comunicación"
+msgid "This site is managed by the @name"
+msgstr "Gestionada por la @name"
 
 msgid "https://ec.europa.eu/info/strategy_en"
 msgstr "https://ec.europa.eu/info/strategy_es"
