--- a/translations/oe_corporate_blocks-fr.po
+++ b/translations/oe_corporate_blocks-fr.po
@@ -148,8 +148,8 @@ msgstr "https://ec.europa.eu/info/index_fr"
 msgid "European Commission website"
 msgstr "Site web de la Commission européenne"
 
-msgid "This site is managed by the Directorate-General for Communication"
-msgstr "Ce site est géré par la direction générale de la communication"
+msgid "This site is managed by the @name"
+msgstr "Ce site est géré par la @name"
 
 msgid "https://ec.europa.eu/info/strategy_en"
 msgstr "https://ec.europa.eu/info/strategy_fr"
