--- a/translations/oe_corporate_blocks-it.po
+++ b/translations/oe_corporate_blocks-it.po
@@ -145,8 +145,8 @@ msgstr "https://ec.europa.eu/info/index_it"
 msgid "European Commission website"
 msgstr "Sito web della Commissione europea"
 
-msgid "This site is managed by the Directorate-General for Communication"
-msgstr "Il sito è gestito dalla direzione generale della Comunicazione"
+msgid "This site is managed by the @name"
+msgstr "Il sito è gestito da @name"
 
 msgid "https://ec.europa.eu/info/strategy_en"
 msgstr "https://ec.europa.eu/info/strategy_it"
