--- a/translations/oe_corporate_blocks-mt.po
+++ b/translations/oe_corporate_blocks-mt.po
@@ -145,8 +145,8 @@ msgstr "https://ec.europa.eu/info/index_mt"
 msgid "European Commission website"
 msgstr "Is-sit web tal-Kummissjoni Ewropea"
 
-msgid "This site is managed by the Directorate-General for Communication"
-msgstr "Dan is-sit huwa ġestit mid-Direttorat Ġenerali għall-Komunikazzjoni"
+msgid "This site is managed by the @name"
+msgstr "Dan is-sit huwa ġestit mid-@name"
 
 msgid "https://ec.europa.eu/info/strategy_en"
 msgstr "https://ec.europa.eu/info/strategy_mt"
