--- a/translations/oe_corporate_blocks-sv.po
+++ b/translations/oe_corporate_blocks-sv.po
@@ -145,8 +145,8 @@ msgstr "https://ec.europa.eu/info/index_sv"
 msgid "European Commission website"
 msgstr "Europeiska kommissionens webbplats"
 
-msgid "This site is managed by the Directorate-General for Communication"
-msgstr "Webbplatsen sköts av generaldirektoratet för kommunikation"
+msgid "This site is managed by the @name"
+msgstr "Webbplatsen sköts av @name"
 
 msgid "https://ec.europa.eu/info/strategy_en"
 msgstr "https://ec.europa.eu/info/strategy_sv"
