--- a/translations/oe_corporate_blocks-da.po
+++ b/translations/oe_corporate_blocks-da.po
@@ -142,8 +142,8 @@ msgstr "https://ec.europa.eu/info/index_da"
 msgid "European Commission website"
 msgstr "Europa-Kommissionens eget website"
 
-msgid "This site is managed by the Directorate-General for Communication"
-msgstr "Dette website administreres af Generaldirektoratet for Kommunikation"
+msgid "This site is managed by the @name"
+msgstr "Dette website administreres af @name"
 
 msgid "https://ec.europa.eu/info/strategy_en"
 msgstr "https://ec.europa.eu/info/strategy_da"
