--- a/translations/oe_corporate_blocks-fi.po
+++ b/translations/oe_corporate_blocks-fi.po
@@ -148,8 +148,8 @@ msgstr "https://ec.europa.eu/info/index_fi"
 msgid "European Commission website"
 msgstr "Euroopan komission verkkosivusto"
 
-msgid "This site is managed by the Directorate-General for Communication"
-msgstr "Tätä sivustoa hallinnoi komission viestinnän pääosasto"
+msgid "This site is managed by the @name"
+msgstr "Tätä sivustoa hallinnoi @name"
 
 msgid "https://ec.europa.eu/info/strategy_en"
 msgstr "https://ec.europa.eu/info/strategy_fi"
