--- a/translations/oe_corporate_blocks-pl.po
+++ b/translations/oe_corporate_blocks-pl.po
@@ -148,8 +148,8 @@ msgstr "https://ec.europa.eu/info/index_pl"
 msgid "European Commission website"
 msgstr "Strona internetowa Komisji Europejskiej"
 
-msgid "This site is managed by the Directorate-General for Communication"
-msgstr "Stroną zarządza Dyrekcja Generalna ds. Komunikacji Społecznej"
+msgid "This site is managed by the @name"
+msgstr "Stroną zarządza @name"
 
 msgid "https://ec.europa.eu/info/strategy_en"
 msgstr "https://ec.europa.eu/info/strategy_pl"
