--- a/translations/oe_corporate_blocks-pt-pt.po
+++ b/translations/oe_corporate_blocks-pt-pt.po
@@ -142,8 +142,8 @@ msgstr "https://ec.europa.eu/info/index_pt"
 msgid "European Commission website"
 msgstr "Sítio Web institucional da Comissão Europeia"
 
-msgid "This site is managed by the Directorate-General for Communication"
-msgstr "Este sítio é gerido pela Direção-Geral da Comunicação"
+msgid "This site is managed by the @name"
+msgstr "Este sítio é gerido pela @name"
 
 msgid "https://ec.europa.eu/info/strategy_en"
 msgstr "https://ec.europa.eu/info/strategy_pt"
