EWPP-628: Translations of string "Legal" missing from EU footer.

--- a/translations/oe_corporate_blocks-bg.po
+++ b/translations/oe_corporate_blocks-bg.po
@@ -130,6 +130,9 @@ msgstr "Политика за поверителност"
 msgid "https://europa.eu/european-union/abouteuropa/privacy-policy_en"
 msgstr "https://europa.eu/european-union/abouteuropa/privacy-policy_bg"
 
+msgid "Legal"
+msgstr "Правни аспекти"
+
 msgid "Legal notice"
 msgstr "Правна информация"
 
