--- a/translations/oe_corporate_blocks-da.po
+++ b/translations/oe_corporate_blocks-da.po
@@ -127,6 +127,9 @@ msgstr "Databeskyttelsespolitik"
 msgid "https://europa.eu/european-union/abouteuropa/privacy-policy_en"
 msgstr "https://europa.eu/european-union/abouteuropa/privacy-policy_da"
 
+msgid "Legal"
+msgstr "Juridiske forhold"
+
 msgid "Legal notice"
 msgstr "Juridisk meddelelse"
 
