--- a/translations/oe_corporate_blocks-sl.po
+++ b/translations/oe_corporate_blocks-sl.po
@@ -121,6 +121,9 @@ msgstr "Politika varstva zasebnost"
 msgid "https://europa.eu/european-union/abouteuropa/privacy-policy_en"
 msgstr "https://europa.eu/european-union/abouteuropa/privacy-policy_sl"
 
+msgid "Legal"
+msgstr "Pravni pogoji"
+
 msgid "Legal notice"
 msgstr "Pravno obvestilo"
 
