--- a/translations/oe_corporate_blocks-fr.po
+++ b/translations/oe_corporate_blocks-fr.po
@@ -130,6 +130,9 @@ msgstr "Protection de la vie privée"
 msgid "https://europa.eu/european-union/abouteuropa/privacy-policy_en"
 msgstr "https://europa.eu/european-union/abouteuropa/privacy-policy_fr"
 
+msgid "Legal"
+msgstr "Avis juridique"
+
 msgid "Legal notice"
 msgstr "Avis juridique"
 
