--- a/translations/oe_corporate_blocks-hu.po
+++ b/translations/oe_corporate_blocks-hu.po
@@ -128,6 +128,9 @@ msgstr "Adatvédelem"
 msgid "https://europa.eu/european-union/abouteuropa/privacy-policy_en"
 msgstr "https://europa.eu/european-union/abouteuropa/privacy-policy_hu"
 
+msgid "Legal"
+msgstr "Jogi információk"
+
 msgid "Legal notice"
 msgstr "Jogi nyilatkozat"
 
