--- a/translations/oe_corporate_blocks-sk.po
+++ b/translations/oe_corporate_blocks-sk.po
@@ -124,6 +124,9 @@ msgstr "Politika ochrany osobných údajov"
 msgid "https://europa.eu/european-union/abouteuropa/privacy-policy_en"
 msgstr "https://europa.eu/european-union/abouteuropa/privacy-policy_sk"
 
+msgid "Legal"
+msgstr "Právna informácia"
+
 msgid "Legal notice"
 msgstr "Právne upozornenie"
 
